force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Debit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is driven by user selection during creation of the spread statement record total (group total). When enabled, the spread statement record total (group total) is treated as a debit. When disabled, the spread statement record total is treated as a credit. By default, it is disabled. After initial creation, this cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
    <label>Debit</label>
    <type>Checkbox</type>
</CustomField>