force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Group_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Group_Type__c</fullName>
    <description>This field is optional. It is driven by user selection during creation of the spread statement record total (group total). This field controls the display of the value(s) for the spread statement record total (group total). &quot;Financial&quot; dispalys the value with a currency sign. &quot;Percentage&quot; displays the value with the decimal moved two two places to the right and with a percentage sign. &quot;Decimal&quot; displays the value with no signs. By default, this field is set to Financial. After initial creation, this cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
                <default>true</default>
                <label>Financial</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>