force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Hide_All_Records__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hide_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Manually update to change. If this is set to true all the records belonging to this group will be hidden from view but will still be included in the calculation of the total.</description>
    <label>Hide All Records</label>
    <type>Checkbox</type>
</CustomField>