force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Include_In_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Include_In_Total__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It is driven by user selection within the spreading application. When enabled, the spread statement record total (group) is not displayed in the spread statement. When disabled, it is displayed. By default, it is disabled.</description>
    <label>Include In Total</label>
    <type>Checkbox</type>
</CustomField>