force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Is_Balance_Check__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Balance_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox to monitor a Spreads total group for imbalance. By default, it is deselected.</description>
    <label>Is Balance Check</label>
    <type>Checkbox</type>
</CustomField>