force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__KPI_Type__c</fullName>
    <description>This field is optional. It is driven by user selections within the spreading application. When &quot;Standard Highlight&quot; is selected, the spread statement record total (group total) is treated as a highlight that cannot be deselected by a user. When &quot;User Highlight&quot; is selected, the spread statement record total can be deselected by a user. If neither are selected, the spread statement record is not treated as a highlight. By default, this picklist is set to none.</description>
    <label>Highlights Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Highlight</fullName>
            </value>
            <value>
                <fullName>User Highlight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>