force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Show_Math__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Show_Math__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field drives the ability to see the operators being used to calculate the group total.</description>
    <label>Show Math</label>
    <type>Checkbox</type>
</CustomField>