force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Spread_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Type__c</fullName>
    <description>This field is required. It is populated automatically whenever a spread statement record total (group total) is created within the spreading applicaiton. This field specifies the spread Statement type associated with the Spread Statement record total.</description>
    <label>Spread Statement Type</label>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Spread Statement Total Groups</relationshipLabel>
    <relationshipName>Spread_Statement_Total_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>