force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Total_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Type__c</fullName>
    <description>This field is required. It is set automatically whenver a spread statement record total (group total) is created. It specifies the type of spread statement record: &quot;Standard&quot; is is the default and used for all user created groups. &quot;Knockout&quot; is used for &quot;Operating Expenses&quot; in the NOI Statement, as it is a custom group.</description>
    <label>Total Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Knockout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>